--- a/.env_example
+++ b/.env_example
@@ -1,17 +1,17 @@
 AUTH_SECRET=""
-PORT="4009"
+PORT="4020"
 
 #BANCDO DE DADOS
 DB_HOST="127.0.0.1"
 DB_PORT="3306"
-DB_DATABASE="vamos_comemorar"
+DB_DATABASE="ambev"
 DB_USER=""
 DB_PASSWORD=""
 
 #REDIS
 RD_HOST="127.0.0.1"
 RD_PORT="6379"
-RD_PREFIX="VC_"
+RD_PREFIX="AV_"
 
 #AWS
 AWS_ACCESS_KEY=""
@@ -23,10 +23,6 @@ MJ_SECRET_KEY=""
 
 #SENTRY
 SENTRY_DNS=""
-
-#BARTE
-BARTE_KEY=""
-BARTE_URL=""
 
 # GENERAL
 DAYS_TOKEN="1"
