--- a/package.json
+++ b/package.json
@@ -2,5 +2,29 @@
   "name": "ambev",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
+    "body-parser": "^1.20.1",
+    "consign": "^0.1.6",
+    "cors": "^2.8.5",
+    "cpf": "^2.0.1",
+    "dotenv": "^16.0.3",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "express": "^4.18.2",
+    "keygenerator": "^1.0.4",
+    "knex": "^2.3.0",
+    "knex-paginate": "^3.0.2",
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "sharp": "^0.31.2",
+    "slugify": "^1.6.5",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2"
+  }
 }
