--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.0.3",
     "eslint": "^7.32.0 || ^8.2.0",
     "express": "^4.18.2",
+    "jwt-simple": "^0.5.6",
     "keygenerator": "^1.0.4",
     "knex": "^2.3.0",
     "knex-paginate": "^3.0.2",
