--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cpf": "^2.0.1",
     "dotenv": "^16.0.3",
     "eslint": "^7.32.0 || ^8.2.0",
+    "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "jwt-simple": "^0.5.6",
     "keygenerator": "^1.0.4",
