--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "knex-paginate": "^3.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "node-mailjet": "^6.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "sharp": "^0.31.2",
