--- a/.env_example
+++ b/.env_example
@@ -4,14 +4,14 @@ PORT="4020"
 #BANCDO DE DADOS
 DB_HOST="127.0.0.1"
 DB_PORT="3306"
-DB_DATABASE="ambev"
+DB_DATABASE="jp_access"
 DB_USER=""
 DB_PASSWORD=""
 
 #REDIS
 RD_HOST="127.0.0.1"
 RD_PORT="6379"
-RD_PREFIX="AV_"
+RD_PREFIX="JP_"
 
 #AWS
 AWS_ACCESS_KEY=""
@@ -27,3 +27,11 @@ SENTRY_DNS=""
 # GENERAL
 DAYS_TOKEN="1"
 CDN_LINK=""
+
+# QRCODE EXAMPLE
+# JPLOTEACNUM
+# JP -> Sigla restaurante
+# LOTE -> Lote do Qrcode
+# AC -> Separador (Ac de Access)
+# NUM -> Numero do QRcode
+# 
