--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "knex-paginate": "^3.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "node-cron": "^3.0.2",
     "node-mailjet": "^6.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "sharp": "^0.31.2",
     "slugify": "^1.6.5",
     "socket.io": "^4.6.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "eslint-config-airbnb-base": "^15.0.0",
