--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "consign": "^0.1.6",
     "cors": "^2.8.5",
     "cpf": "^2.0.1",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "eslint": "^7.32.0 || ^8.2.0",
     "exceljs": "^4.3.0",
