--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@sentry/node": "^7.48.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.20.1",
     "consign": "^0.1.6",
