--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@sentry/node": "^7.48.0",
+    "async": "^3.2.4",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.20.1",
     "consign": "^0.1.6",
